--- a/project/rock-paper-scissors/index.html
+++ b/project/rock-paper-scissors/index.html
@@ -20,6 +20,11 @@
 
     <script>
         let compMove;
+        let score = {
+            Wins: 0,
+            losses: 0,
+            ties: 0
+        };
 
         function pickCompMove(){
             const randNum = Math.random();
@@ -57,7 +62,12 @@
                 else if (compMove === 'Scissors') result = 'win';
             }
 
-            alert(`You picked ${playerMove}. Computer picked ${compMove}. ${result}`);
+            if (result === 'Won') score.Wins += 1;
+            else if (result === 'Lost') score.losses += 1;
+            else if (result === 'tie') score.ties += 1;
+
+            alert(`You picked ${playerMove}. Computer picked ${compMove}. ${result}
+Wins: ${score.Wins}, Loses: ${score.losses}, Ties: ${score.ties}`);
         }
 
 
