--- a/project/DOM/rockPaperScissorsDOM.html
+++ b/project/DOM/rockPaperScissorsDOM.html
@@ -18,12 +18,17 @@
         playGame('Scissors');
     ">Scissors</button>
 
+    <p class="js-moves"></p>
+    <p class="js-scores"></p>
+
+    <p class = "js-score"></p>
     <button onclick="
     score.win = 0;
     score.losses = 0;
     score.ties = 0;
 
     localStorage.removeItem('score');
+    updateScoreElem();
 
     alert(`Score streak has been reset.`)
     ">Reset Score</button>
@@ -43,6 +48,16 @@
         //         ties : 0
         //     };
         // }    //kept for reference of the above part
+        // updateMoves();
+        updateScoreElem();
+
+        function updateScoreElem(){
+            document.querySelector('.js-score')
+                .innerHTML = `win: ${score.win}, Loses: ${score.losses}, Ties: ${score.ties}`;
+        }
+        // function updateMoves(){
+        //     document.querySelector('.js-moves').innerHTML = `You chose ${playerMove}. Computer chose ${compMove}`;
+        // }
 
         function pickCompMove(){
             const randNum = Math.random();
@@ -81,16 +96,28 @@
             }
 
             if (result === 'win') score.win += 1;
-            else if (result === 'lost') score.losses += 1;
+            else if (result === 'lose') score.losses += 1;
             else if (result === 'tie') score.ties += 1;
 
             localStorage.setItem('score', JSON.stringify(score)); // saving the scores permenantly. localStorage can only take strings so implementing stringify() on score object.
 
-            alert(`You picked ${playerMove}. Computer picked ${compMove}. ${result}
-win: ${score.win}, Loses: ${score.losses}, Ties: ${score.ties}`);
+            // updateMoves();
+            updateScoreElem();
+
+            document.querySelector('.js-scores').innerHTML = result;
+            updateMoves();
+            document.querySelector('.js-moves').innerHTML = `You chose ${playerMove}. Computer chose ${compMove}`;
+
+
+            
+//             alert(`You picked ${playerMove}. Computer picked ${compMove}. ${result}
+// win: ${score.win}, Loses: ${score.losses}, Ties: ${score.ties}`);
         }
 
-
+        // function updateMoves(){
+        //     document.querySelector('.js-moves')
+        //             .innerHTML = `You -> ${playerMove}`;
+        // }
 
     </script>
 </body>
